# ImC

./: LICENSE  README.md  pyproject.toml
cli/: __init__.py  app.py  convert.py  utils.py
scripts/: install.ps1  install.sh
